# AVE-TECHNOLOGIES_TASK

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  dump.rdb  pyproject.toml
app/: main.py
app/api/: dependencies.py  endpoints.py  schemas.py
app/core/: settings.py
app/services/: app_service.py  redis_service.py
tests/: confest.py  conftest.py  test_api.py
